<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>costmap_depth_camera</name>
    <version>1.0.0</version>
    <description>
	This package uses point cloud along with camera characteristic (FOV, detection range etc...) to mark and clear obstacles in costmap_2d.
    </description>
    <author>Apola</author>
    <author>yan_1whun1@hotmail.com</author>
    <maintainer email="yan_1whun1@hotmail.com">Apola</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_sensor_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>costmap_2d</build_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>eigen</depend>
    <depend>geometry_msgs</depend>
    <depend>map_msgs</depend>
    <depend>message_filters</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>rostest</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rosconsole</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>costmap_2d</exec_depend>

    <export>
      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
    </export>
</package>
