<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>costmap_depth_camera</name>
    <version>3.0.0</version>
    <description>
	This package uses point cloud along with camera characteristic (FOV, detection range etc...) to mark and clear obstacles in costmap_2d.
    </description>
    <author>Apola</author>
    <author>yan_1whun1@hotmail.com</author>
    <author>Bilal Arain </author>
    <maintainer email="yan_1whun1@hotmail.com">Apola</maintainer>
    <maintainer email="arain.bilal@gmail.com">Bilal Arain</maintainer> 
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>nav2_costmap_2d</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_ros</depend>
    <depend>message_filters</depend>
    <depend>geometry_msgs</depend>
    <depend>pluginlib</depend>

    <!--
    <export>
      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
      <build_type>ament_cmake</build_type>
    </export>
  -->
</package>
